@@ -1,3 +1,7 @@
+16 January 2012: Matthijs
+- Signer should not fail read task if there is no new xfr (thanks
+  Ville Mattila)
+
 10 January 2012: Matthijs
 - OPENDNSSEC-350: Improve logging when there are problems with inbound xfr
 - SUPPORT-44: bind() to sockets before privdrop
